# housepricesml

./: .gitignore  best_params.json  poetry.toml  pyproject.toml
.dvc/: config
mlflow/: .env  docker-compose.yaml  requirements.txt
model/: data_analysis.ipynb  data_preprocess.ipynb  main.py  model_prep.ipynb  model_xgboost.ipynb
model/conf/: config.yaml
model/conf/models/: nn.yaml  regressor.yaml  xgb.yaml
model/conf/models/params/nn/: params.yaml
model/conf/models/params/xgb/: params.yaml  params2.yaml
model/conf/xgb/: xgb.yaml
model/data/: .gitignore  grid_search_params.json  grid_search_params.json.dvc  random_search_params.json  random_search_params.json.dvc  test_preprocessed.csv  train_preprocessed.csv
model/models/: models.py
model/notebooks/: data_analysis.ipynb  data_preprocess.ipynb  features_importance.ipynb  mlflow.ipynb  model_regression.ipynb  model_xgboost.ipynb
model/utils/: chi_square.py  data_analysis.py  data_preprocess.py  hyper_params.py  mlflow.py
