[tool.poetry]
name = "housing"
version = "0.1.0"
description = ""
authors = ["mizaqq <michal.zareba@softwaremill.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
scipy = "^1.14.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
xgboost = "^2.1.1"
pydantic = "^2.9.2"
keras = "^3.5.0"
tensorflow = "^2.17.0"
mlflow = {extras = ["databricks"], version = "^2.16.2"}
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
